--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2020",
     "module": "commonjs",
+    "outDir": "./build",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
     "lib": ["DOM", "ES2016"],
     "allowJs": true,
     "checkJs": true,
-    "sourceMap": true,
-    "outDir": "./build",
     "removeComments": true,
-    "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "baseUrl": "./",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "resolveJsonModule": true,
+      "typeRoots": ["./node_modules/@types"],
+      "types": ["node"]
   },
-  "include": ["src/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/*", "src/**/*", "prisma/**/*"],
+  "exclude": ["node_modules", "prisma/seed.ts", "build"]
 }
