--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
+
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "ESNext",
     "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "lib": ["DOM", "ES2016"],
+    "lib": ["DOM", "ES2020"],
     "allowJs": true,
     "checkJs": true,
     "removeComments": true,
@@ -19,8 +21,12 @@
     "strictFunctionTypes": true,
     "baseUrl": "./",
     "resolveJsonModule": true,
-      "typeRoots": ["./node_modules/@types"],
-      "types": ["node"]
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node"]
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "include": ["src/*", "src/**/*", "prisma/**/*"],
   "exclude": ["node_modules", "prisma/seed.ts", "build"]
